--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -40,6 +40,37 @@
 *::after {
   box-sizing: border-box;
 }
+/* <----- Begin Jake's CSS -----> */
+.navbar {
+  margin-bottom: 0;
+  border-radius: 0;
+}
+
+.row.content {
+  height: 450px
+}
+
+.sidenav {
+  padding-top: 20px;
+  background-color: #f1f1f1;
+  height: 100%;
+}
+
+footer {
+  background-color: #555;
+  color: white;
+  padding: 15px;
+}
+
+/* On small screens, set height to 'auto' for sidenav and grid */
+@media screen and (max-width: 767px) {
+  .sidenav {
+    height: auto;
+    padding: 15px;
+  }
+  .row.content {height:auto;}
+}
+/* <----- End Jake's CSS -----> */
 
 html {
   font-family: sans-serif;
