--- a/css/jakestrap.css
+++ b/css/jakestrap.css
@@ -1,6 +1,23 @@
+body {
+  background-color: #fff;
+}
+
 .navbar {
+  background-color: #1658A6;
   margin-bottom: 0;
-  border-radius: 0;
+  border-radius: .5em;
+}
+
+.navbar-inverse {
+  border-color: #fff;
+}
+
+.navbar-inverse .navbar-nav>li>a {
+  color: #fff;
+}
+
+.navbar-inverse .navbar-brand {
+  color: #fff;
 }
 
 .row.content {
@@ -14,6 +31,7 @@
 }
 
 img {
+  margin-top: 3px;
   float: left;
 }
 
