--- a/css/jakestrap.css
+++ b/css/jakestrap.css
@@ -26,8 +26,17 @@ body {
 
 .sidenav {
   padding-top: 20px;
-  background-color: #f1f1f1;
   height: 100%;
+}
+
+.sidenav .left {
+  border-left-color: black;
+  border-left: 2px;
+}
+
+.sidenav .right {
+  border-right-color: black;
+  border-right: 2px;
 }
 
 img {
